# qa-automation-python-demo

./: .gitignore  Project_Architecture_Blueprint.md  README.md  conftest.py  logging.ini  pyproject.toml  requirements.txt  rest-scratchpad.http
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: readme.prompt.md
.github/skills/: AI-INSTALL-GUIDE.md  README.md
.github/skills/brownfield-developer-qa-automation-python-demo/: SKILL.md
.github/skills/brownfield-developer-qa-automation-python-demo/references/: architecture.md  coding-conventions.md  development-patterns.md  module-structure.md  tech-stack.md
.github/skills/brownfield-skills/: SKILL.md
.github/skills/brownfield-skills/references/: templates-cn.md  templates.md
resources/: swagger-petstore-default-config.ini  terminalx-default-config.ini
specs/: rest.md
src/python_selenium/: terminalx_configuration.py  terminalx_steps.py  test_configuration.py  test_steps.py
src/python_selenium/attic/pages/: base_page.py  landing_page.py  login_page.py  product_page.py  search_results_page.py
src/python_selenium/examples/: swagger_petstore_configuration.py  swagger_petstore_steps.py  terminalx_configuration.py  terminalx_steps.py
src/python_selenium/model/: credentials.py  user.py
src/python_selenium/model/examples/: swagger_petstore_credentials.py  swagger_petstore_pet.py  terminalx_credentials.py  terminalx_user.py
src/python_selenium/rest/: rest_configuration.py  rest_steps.py  rest_tests.py
src/python_selenium/selenium/: selenium_configuration.py  selenium_steps.py  selenium_tests.py
src/python_selenium/testing/: abstract_configuration.py  abstract_tests_base.py  bdd_keywords.py  exceptions.py  generic_steps.py
src/python_selenium/utils/: enum_utils.py  exception_utils.py  file_utils.py  logger.py  matchers.py  object_utils.py  stream_utils.py  string_utils.py  thread_utils.py  tuple_utils.py
src/qa_automation_python_demo/: amazon_configuration.py  amazon_steps.py  pw_terminalx_configuration.py  pw_terminalx_steps.py  swagger_petstore_configuration.py  swagger_petstore_steps.py  terminalx_configuration.py  terminalx_steps.py
src/qa_automation_python_demo/configurations/: amazon_configuration.ini
src/qa_automation_python_demo/model/examples/: swagger_petstore_credentials.py  terminalx_credentials.py  terminalx_user.py
tests/: amazon_tests.py  conftest.py  pw_terminalx_tests.py  swagger_petstore_tests.py  terminalx.py  terminalx_steps.py  terminalx_tests.py
tests/attic/: test_terminalx.py
tests/examples/: swagger_petstore_tests.py  terminalx_tests.py
tests/resources/: default-config.ini  users.json
tests/utils/: assertion_tests.py  bdd_scenario_tests.py  exception_utils_tests.py  logger_tests.py  matchers_tests.py  object_utils_tests.py  self_tests.py  stream_utils_tests.py  string_utils_tests.py  tuple_utils_tests.py
