[project]
name = "qa-automation-python-demo"
version = "0.0.0"
description = "Python demo project for QA Automation"
authors = [{ name = "Adrian Herscu", email = "adrian.herscu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PyHamcrest==2.1.0",
  "qa-testing-utils==0.0.9",
  "qa-pytest-rest==0.0.9",
  "qa-pytest-webdriver==0.0.9",
  "qa-pytest-commons==0.0.9"
]

[tool.pdm.dev-dependencies]
dev = [
  "pytest",
  "pytest-html",
  "pytest-cov",
  "allure-pytest",
]

[tool.pytest.ini_options]
addopts = "-s --import-mode=importlib --html=report.html --self-contained-html --alluredir=allure-results"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "*.py"
python_classes = "*Tests"
python_functions = "should_*"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
clean = "git clean -fdX"
